--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png+xml" href="/healthCare_logo.png" />
+    <link rel="icon" type="image/jpg+xml" href="/healthCare_logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Health Care Pharma</title>
   </head>
